[package]
name = "backlight"
version = "0.1.0"
description = "RGB backlight with a Novation Launchpad Mk2"
authors = ["Cassaundra <cass@cassaundra.io>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
launchpad = { git = "https://github.com/cassaundra/launch-rs.git" }
scrap = "0.5.0"
structopt = "0.3.20"